--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -48,7 +48,6 @@ figcaption {
 }
 
 table {
-  width: 100%;
   border-collapse: collapse;
   margin: 2rem 0;
   font-size: 0.95em;
